attempt at fixing background not showing in github.io

--- a/css/style.scss
+++ b/css/style.scss
@@ -326,8 +326,7 @@ main {
 
     div.parallax{
         height: 50vh;
-        background-image: url('img/Mushroom.jpg');
-        background-color: $black;
+        background-image: url('/img/Mushroom.jpg');
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
